syntax = "proto3";

option csharp_namespace = "hmt_energy_csharp.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

service Cloud {
	
	rpc Recieve(RecieveRequest) returns (RecieveResponse);

}

message RecieveRequest
{
	string recieve_msg=1;
}

message RecieveResponse
{
	int32 result = 1;
	string err_message=2;
}